src/types/tests/snapshots/tgbot__types__tests__chat__chat_permissions.snap
---
source: src/types/tests/chat.rs
expression: "ChatPermissions::default().with_can_send_messages(true).with_can_send_audios(false).with_can_send_documents(true).with_can_send_photos(false).with_can_send_videos(true).with_can_send_video_notes(false).with_can_send_voice_notes(true).with_can_send_polls(true).with_can_send_other_messages(false).with_can_add_web_page_previews(true).with_can_change_info(false).with_can_invite_users(true).with_can_pin_messages(false).with_can_manage_topics(true)"
---
{
  "can_add_web_page_previews": true,
  "can_change_info": false,
  "can_invite_users": true,
  "can_manage_topics": true,
  "can_pin_messages": false,
  "can_send_audios": false,
  "can_send_documents": true,
  "can_send_messages": true,
  "can_send_other_messages": false,
  "can_send_photos": false,
  "can_send_polls": true,
  "can_send_video_notes": false,
  "can_send_videos": true,
  "can_send_voice_notes": true
}
