src/types/tests/snapshots/tgbot__types__tests__chat__create_chat_subscription_invite_link.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "subscription_period": 2592000,
  "subscription_price": 1
}
