src/types/tests/snapshots/tgbot__types__tests__chat__edit_chat_invite_link-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "creates_join_request": false,
  "expire_date": 0,
  "invite_link": "example.com/join/chat",
  "member_limit": 1,
  "name": "Link"
}
