src/types/tests/snapshots/tgbot__types__tests__chat__edit_chat_subscription_invite_link.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "invite_link": "test"
}
