src/types/tests/snapshots/tgbot__types__tests__chat__get_chat_administrators-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "return_bots": true
}
